Actualizacion pedidos y edicion
